HTML 冒頭文の変更と冒頭文下部分にラインを追加（my-4） CSS front-sizeを3.0から3.5rem1へ変更した

--- a/vreco-project/public/css/bootstrap.css
+++ b/vreco-project/public/css/bootstrap.css
@@ -409,8 +409,9 @@ h6, .h6 {
   line-height: 1.2;
 }
 
+/*VRECOの見出しの間隔が大きい感じがしたため、remを3.5から3.0へ変更しています。*/
 .display-4 {
-  font-size: 3.5rem;
+  font-size: 3.0rem;
   font-weight: 300;
   line-height: 1.2;
 }
@@ -418,7 +419,7 @@ h6, .h6 {
 hr {
   margin-top: 1rem;
   margin-bottom: 1rem;
-  border: 0;
+  border: 0px;
   border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
 
@@ -4709,7 +4710,7 @@ input[type="button"].btn-block {
 }
 
 .navbar-dark .navbar-toggler-icon {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(255, 255, 255, 0.5)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+  -image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(255, 255, 255, 0.5)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
 
 .navbar-dark .navbar-text {
